css/style.css
*
{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-size: 16px;
	color: #0c0c0c;
}



.container
{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	height: 100vh;
	background: #0c0c0c;
	padding: 1rem;
	max-width: 100%;
}

main form 
{
	width: 100%;
	max-width: 100%;

}

main form input
{
	display: block;
	width: 23.8rem;
	max-width: 100%;
	margin: 0 auto;
	padding: 0.8rem;
	text-align: right;
	font-size: 5rem;
	font-weight: 200;
	background: #0c0c0c;
	color: #fcfcfc;
	border: none;
}

main form input:focus
{
	outline: 0.5px solid rgba(200, 200, 200, 0.5);
}

main ul 
{
	list-style: none;
	display: flex;	
	justify-content: space-evenly;
	max-width: 100%;
}

main ul li 
{
	margin: 0 auto;
	max-width: 100%;
	flex: 1;
}

main ul li button
{
	width: 4.5rem;
	height: 4.5rem;
	border-radius: 50%;
	max-width: 100%;
	margin: 0.7rem;
	padding: 0.7rem 1.3rem;
	border: none;
	font-size: 2.8rem;
	font-weight: bold;
	color: #0c0c0c;
	display: block;
	transition: 0.5s;
	cursor: pointer;
}

main ul li button:hover
{
	outline: 8px solid rgba(0, 0, 0, 0.9);
	transition: outline 0.2s;
}

main ul li button:active
{
	outline: 8px solid rgba(200, 200, 200, 0.9);
	transform: scale(1.1);
	transition: outline 0.2s;
}

.fa-solid
{
	font-size: 1.5rem;
	color: #0f0f0f;
}

main ul:nth-child(2) button
{
	background-color: #D3D3D1;
}

main ul:nth-child(3) button,
main ul:nth-child(4) button,
main ul:nth-child(5) button,
main ul:nth-child(6) button
{
	background-color: #7d7d7d;
}

main ul li:last-child button
{
	background-color: #FF7F27;
}

